# pnap

./: .gitignore  .mise.toml  README.md  pyproject.toml
example/: EEE_ETAI-template.docx  data_prep.ipynb  model.ipynb  model_15d.ipynb  model_30d.ipynb  model_7d.ipynb  visualization.ipynb
notebooks/: 01-telco-churn-prediction.ipynb
presentations/: telco-churn-presentation.pptx
reports/: generate_report_assets.py  telco_churn_report.md
reports/tables/: baseline_classification_report.txt  baseline_metrics.csv  baseline_metrics.md  baseline_vs_engineered.csv  baseline_vs_engineered.md  churn_distribution.csv  churn_distribution.md  cleaning_summary.csv  cleaning_summary.md  dataset_overview.csv  dataset_overview.md  final_classification_report.txt  final_comparison.csv  final_comparison.md  hyperparameter_results.csv  hyperparameter_results.md  initial_best_classification_report.txt  model_comparison.csv  model_comparison.md  selected_vs_full_features.csv  selected_vs_full_features.md  top_mutual_information_features.csv  top_mutual_information_features.md  top_random_forest_importances.csv  top_random_forest_importances.md
