[project]
name = "telco-churn-prediction"
version = "0.1.0"
description = "Machine learning seminar project for customer churn prediction using the Telco Customer Churn dataset."
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
